--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,21 @@
         android:name="com.example.sharetask.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home"/>
-
+    <fragment
+        android:id="@+id/navigation_bookmark"
+        android:name="com.example.sharetask.ui.menu.BookmarkFragment"
+        android:label="Bookmark"
+        tools:layout="@layout/fragment_bookmark"/>
+    <fragment
+        android:id="@+id/navigation_upload"
+        android:name="com.example.sharetask.ui.menu.UploadFragment"
+        android:label="Upload"
+        tools:layout="@layout/fragment_upload"/>
+    <fragment
+        android:id="@+id/navigation_notification"
+        android:name="com.example.sharetask.ui.menu.NotificationFragment"
+        android:label="Notification"
+        tools:layout="@layout/fragment_notification"/>
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.example.sharetask.ui.menu.ProfileFragment"
