--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0F9AFE</color>
     <color name="blue_secondary">#26E4FF</color>
+    <color name="gray">#808080</color>
 </resources>
